2009-07-23  higepon  <higepon@users.sourceforge.jp>

        * eqv? and equal? now guarantee #t when given two NaNs (unspecified by R6RS).

2009-07-20  higepon  <higepon@users.sourceforge.jp>

        * Flonum.h : Changed the equivalence of nan. (See Issue 78).

        * test/number.scm : Added.

        * FFI.h : Changed the offset not to scale to size of Type (See Issue 70).

        * mosh.1, mosh_config.1: Added man by dmoerner. (Issue 77: Manpages for mosh)

2009-07-19  higepon  <higepon@users.sourceforge.jp>

        * NumberReader.y : Fixed (=  #i1.2e-3 #i12e-4) => #f should be #t (Issue 75 pointed out by mrc.mgg).

2009-07-18  higepon  <higepon@users.sourceforge.jp>

        * main.cpp: Fixed the type pointed out by dmoerner. (Issue 76)

2009-07-17  higepon  <higepon@users.sourceforge.jp>

        * Added auto-compilation mode (experimental).

2009-07-13  higepon  <higepon@users.sourceforge.jp>

        * Rewrote join-wraps in C++.

        * same-marks*?
          same-marks?
          id->real-label

          Rewrote in C++ for performance.

2009-07-12  higepon  <higepon@users.sourceforge.jp>

        * VM-Run.cpp (VM::run): Added SIMPLE_STRUCT_REF instruction.

2009-07-10  higepon  <higepon@users.sourceforge.jp>

        * Added simple sturct, back-end for psyntax.
          It is faster than R6RS records.

2009-07-09  higepon  <higepon@users.sourceforge.jp>

        * ArithmeticProcedures.cpp (scheme::remainderEx): Fixed the remainder procedures.

2009-07-06  higepon  <higepon@users.sourceforge.jp>

        * FFIProcedures.cpp : fixed pointer-set-c-int64!.

        * Bignum.h : Fixed bit count bug.

2009-07-04  higepon  <higepon@users.sourceforge.jp>

        * Added pointer-set-c-uint8!, pointer-set-c-uint16!,  pointer-set-c-uint32!, pointer-set-c-uint64!.

2009-07-03  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): id->sym was bottleneck.
