@@ -42,6 +42,7 @@ public:
     virtual ~Callable() {}
     virtual Object call(VM* vm, int argc, const Object* argv) = 0;
     Object returnCode[2]; // ugly
+    virtual ucs4string toString() const { return UC("#<callable>"); }
 };
 
 
